# ChampCad

./: .gitignore  ChampCad.cabal  ChampCad.cabal~  MappedToCornerPoints.sql  README.md  branches.txt  persistBasic.sql  stack.yaml  ta
app/: Main.hs
src/Builder/: Builder.hs  ExceptStateIO.hs  Joiner.hs  List.hs  Map.hs  Monad.hs
src/CornerPoints/: Collections.hs  Composable.hs  CornerPoints.hs  Create.hs  Debug.hs  Degree.hs  FaceConversions.hs  FaceExtractAndConvert.hs  FaceExtraction.hs  HorizontalFaces.hs  MeshGeneration.hs  Points.hs  Radius.hs  Rotations.hs  Slicer.hs  Slope.hs  Transpose.hs  VerticalFaces.hs  VerticalFacesWithDegrees.hs
src/Cubical/: Cubical.hs
src/Data/gmeshScripts/: test.geo
src/Data/gmshScripts/: firstTest.geo  test.geo.geo
src/Examples/Cubical/: CubicalKey.hs  CubicalWalls.hs
src/Examples/Diffs/: FirstDiff.hs  MTLDiff.hs
src/Examples/Gmsh/: FirstTest.hs  FirstTestNGADT.hs  Gate.hs
src/Examples/LineScanner/: LineScanner.hs
src/Examples/OpenBionicsCom/: OpenBionicsDotCom.md  OpenBionicsDotComDesignWork.hs
src/Examples/OpenBionicsOrg/: FingerJoints.hs  FingerTubePlate.hs  fingerJoint.stl
src/Examples/OpenHand/: Common.hs  Common.sql  Common.sql-shm  Common.sql-wal  FingerJoints.hs  FlexiSocket.hs  MotorMount.hs  MotorMount.sql  SocketMount.hs  SocketMount.sql  Wrist.hs  flexi.stl  readme.md
src/Examples/Persist/: MappedToCornerPoints.hs  PersistBasic.hs  RadialTest.hs  SingleLineTable.hs  radialTest.db
src/Examples/Primitives/: ComposableExample.hs  Cube.hs  Cylinders.hs  Squared.hs  cube.stl
src/Examples/Scan/: OpenBionicsDotCom.md  OpenBionicsDotComDesignWork.hs  OpenHand.hs  SideMountSocket.hs  SocketBase.hs  WalkerSocket.hs  WalkerSocketDesignWork.hs  WalkerSocketProcessScan.hs  WalkerSocketSquared.hs
src/Examples/ShoeLift/: BlackRunnerToe.hs  CrazyBBoots.hs  GeorgeSandalls.hs  GeoxFlex.hs  GeoxFlex.sql  GeoxPillarsWithAnkleBrace.hs  GeoxShoe.hs  KangarooShoe.hs  KeenToe.hs  SandalsAFO.hs  SandalsHeel.hs  SandalsToe.hs  SnowBoardBoot.hs  geoxPillarsWithAnkleBrace.db
src/Examples/ShoeLift/GeoxFlex/: GeoxFlexBuilder.hs  lineScanner.db  lineScannerOrig.db
src/Examples/ShoeLift/GermanHikers/: GermanHikerBase.hs  lineScanner.db
src/Examples/ShoeLift/MountainFlex/: MountainFlexBase.hs  MountainFlexCurved.hs  ankleBrace.db  ankleBraceOrig.db  lineScanner.db  lineScannerOrig.db
src/Examples/ShoeLift/Pillars/: Common.hs  ContourScan.hs  ContourScan.sh  FlatScan.hs  FullScan.hs  GeoxPillarsWithAnkleBrace.hs  Main.hs  Pillars.hs  geoxPillarsWithAnkleBrace.db
src/GMSH/: Base.hs  Builder.hs  Common.hs  CornerPoints.hs  Curve.hs  CurvePoints.hs  GPoints.hs  GPointsNGADT.hs  Lines.hs  Points.hs  PointsNGADT.hs  State.hs  Writer.hs
src/GMSH/Builder/: Base.hs  BaseNGADT.hs  CornerPoints.hs  CornerPointsNADT.hs  GPoints.hs  GPointsNGADT.hs  Lines.hs  Points.hs  PointsNGADT.hs  readme.md
src/GMSH/Hashable/: Points.hs
src/GMSH/RIO/: State.hs
src/GMSH/ReaderT/: State.hs
src/GMSH/Writer/: Base.hs  GPoints.hs  Lines.hs  readme.md
src/Geometry/: Angle.hs  AngleRadius.hs  CornerPoints.hs  Intercept.hs  PolarIntercept.hs  Radius.hs  Rotation.hs  Slope.hs  Vertex.hs
src/Helpers/: Applicative.hs  FileWriter.hs  List.hs
src/Joiners/: AdvanceBase.hs  AdvanceComposable.hs  AdvanceSupport.hs  AdvanceToHeadOfPerimeters.hs  Advancer.hs  Auto.hs  Delaunay.hs  DelaunayViewer.hs  Manual.hs  RadialLines.hs  temp.hs
src/Math/: Distance.hs  Doubles.hs  Equal.hs  Trigonometry.hs
src/OpenSCad/: Common.hs  Cubes.hs  Cylinders.hs  Dimensions.hs  Exceptions.hs  Polyhedron.hs  PolyhedronExamples.hs  ScriptBase.hs  Translations.hs
src/Persistable/: Base.hs  Mapping.hs  Radial.hs
src/Primitives/: Cubical.hs  Cylindrical.hs  DiamondCutter.hs  DiamondCutterDB.hs  DiamondDefaults.sql
src/Primitives/Cylindrical/: Solid.hs  Walled.hs
src/Scan/: Json.hs  LineScanner.hs  ParseJuicy.hs
src/Stl/: StlBase.hs  StlCornerPoints.hs  StlFileWriter.hs
src/Tests/: AllTestsRun.hs  BuilderMonadTest.hs  CornerPointsSlicerTest.hs  CornerPointsTest.hs  CubicalTest.hs  FaceExtractAndConvertTest.hs  MeshGenerationTest.hs  RadiusTest.hs  RotationsTest.hs  StlAutoGenerateTest.hs
src/TypeClasses/: Showable.hs  Transposable.hs
test/: AdvanceToHeadOfPerimetersTest.hs  AngleTest.hs  BuilderMonadTest.hs  ComposableTest.hs  CornerPointsCollectionsTest.hs  CornerPointsCreateTest.hs  CornerPointsDebugTest.hs  CornerPointsTest.hs  CornerPointsWithDegreesTest.hs  CubicalTest.hs  DelaunayTest.hs  DiamondCutterTest.hs  DistanceTest.hs  FaceExtractAndConvertTest.hs  GeometryRadiusTest.hs  GmshLinesTest.hs  GmshPointsTest.hs  GmshTest.hs  HorizontalFacesTest.hs  InterceptTest.hs  JoinerTest.hs  JsonTest.hs  LineScannerTest.hs  ListHelpersTest.hs  MathPolarTest.hs  MeshGenerationTest.hs  OpenSCadCubesTest.hs  OpenSCadCylindersTest.hs  OpenSCadDimensionsTest.hs  OpenSCadPolyhedronTests.hs  OpenSCadScriptBaseTest.hs  ParseAttoTest.hs  ParseJuicyTest.hs  PointsTest.hs  PolarInterceptTest.hs  RadialLinesTest.hs  RadiusTest.hs  RotationsTest.hs  ScanFilterTest.hs  SequenceTest.hs  (+4 more)
