name:                ChampCad
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/ChampCad#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       CornerPoints.Points, CornerPoints.CornerPoints, CornerPoints.Debug,
                       CornerPoints.Create, CornerPoints.FaceConversions,
                       CornerPoints.FaceExtraction,  CornerPoints.Transpose,
                       CornerPoints.VerticalFaces, CornerPoints.HorizontalFaces,
                       CornerPoints.Radius, CornerPoints.CornerPointsWithDegrees,
                       CornerPoints.FaceExtractionWithDegrees, CornerPoints.VerticalFacesWithDegrees,
                       CornerPoints.FaceConversionsWithDegrees
                       CornerPoints.Degree, CornerPoints.MeshGeneration, CornerPoints.Slicer,
                       CornerPoints.Slope,
                       --TypeClasses
                       TypeClasses.Transposable
                       --Cubical
                       Cubical.Cubical
                       --Builder
                       Builder.Sequence, Builder.List, Builder.Map, Builder.Monad, Builder.Joiner
                       --math
                       Math.Trigonometry,
                       --stl
                       Stl.StlBase, Stl.StlCornerPoints, Stl.StlFileWriter, Stl.StlCornerPointsWithDegrees
                       --helpers
                       Helpers.List, Helpers.DSL,
                       Helpers.Symmetrical.Sequence, Helpers.Symmetrical.List
                       --database
                       Persistable.Mapping
                       Persistable.Radial
                       --Examples
                       -- Example ShoeLifts
                       Examples.ShoeLift.SnowBoardBoot
                       Examples.ShoeLift.GeoxShoe,
                       Examples.ShoeLift.SandalsAFO,
                       Examples.ShoeLift.CrazyBBoots,
                       Examples.ShoeLift.GeorgeSandalls,
                       Examples.ShoeLift.GeoxFlex,
                       Examples.ShoeLift.Pillars.GeoxPillarsWithAnkleBrace
                       Examples.ShoeLift.Pillars.FullScan
                       Examples.ShoeLift.Pillars.Main
                       Examples.ShoeLift.Pillars.ContourScan
                       Examples.ShoeLift.Pillars.Common
                       Examples.ShoeLift.Pillars.FlatScan

                       Examples.Persist.SingleLineTable,
                       Examples.Persist.MappedToCornerPoints,
                       Examples.Persist.RadialTest,
                       --Have not been redone for changes to MathPolar.
                       --Leave in until sure I will not need them further for printing shoe lifts
                       -- Sockets
                       -- scanned shapes
                       Examples.Scan.WalkerSocketProcessScan
                       Examples.Scan.WalkerSocketDesignWork
                       --openHand
                       Examples.OpenHand.Wrist
                       Examples.OpenHand.MotorMount
                       Examples.OpenHand.SocketMount
                       Examples.OpenHand.FlexiSocket
                       Examples.OpenHand.Common
                       Examples.OpenHand.FingerJoints

                       Examples.OpenBionicsCom.OpenBionicsDotComDesignWork
                       -- Misc Shapes
                       --Examples.MiscShapes.RvVentCaps
                       --Exlcluded as they have not been updated for the new cylinders.
                       --Leave in until I have the trailer fixed, to be sure I don't need them.
                       -- Primitives
                       Examples.Primitives.Cube
                       Examples.Primitives.Cylinders
                       Examples.Primitives.Squared
                       --adaptors
                       Examples.Adaptors.HockeyStick
                       --try out removing a cylinder from a cylinder
                       Examples.Diffs.MTLDiff
                       --cubical
                       Examples.Cubical.CubicalWalls
                       Examples.Cubical.CubicalKey
                       --openbionics.org
                       Examples.OpenBionicsOrg.FingerTubePlate
                       Examples.OpenBionicsOrg.FingerJoints
                       
                       --Shapes
                       Primitives.Cylindrical.Walled, Primitives.Cubical
                       Primitives.Cylindrical.Solid
                       Primitives.DiamondCutter
                       Primitives.DiamondCutterDB
                       
                       --Scanning
                       Scan.Filter,
                       Scan.Json,  Scan.ParseJuicy
                       Scan.LineScanner

                       --Geometry
                       Geometry.Radius
                       Geometry.CornerPoints
                       Geometry.Angle
                       Geometry.Slope
                       Geometry.AngleRadius
                       Geometry.Rotation
                       Geometry.Vertex

  build-depends:       base >= 4.7 && < 5
                     , HUnit >=1.2.5.2
                     , bytestring >= 0.10.4.0
                     , split >= 0.2.2
                     , Decimal >= 0.1.0
                     , aeson >= 0.9.0.0
                     , text >= 1.1.0.0
                     , attoparsec >= 0.13.0.1
                     , JuicyPixels >= 3.2.6.1
                     
                     , parallel >= 3.2.0.6
                     , containers >= 0.5.5.1
                     , lens >= 4.13
                     , containers >=0.5.5.1
                     , flow >= 1.0.2
                     , mtl >= 2.2.1
                     , transformers >= 0.4.2.0
                     , random >= 1.1
                     -- next are for examples
                     , directory >= 1.2.2.0
                     , filepath  >= 1.4.0.0
                     , persistent >= 2.2.4
                     , persistent-sqlite >= 2.2
                     , persistent-template >= 1.3.1.4
                     
  default-language:    Haskell2010

executable ChampCad-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ChampCad
                     
  default-language:    Haskell2010

test-suite ChampCad-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       BuilderMonadTest    
                       CornerPointsCreateTest
                       CornerPointsDebugTest
                       CornerPointsTest
                       CornerPointsWithDegreesTest
                       CubicalTest
                       FaceExtractAndConvertTest
                       HorizontalFacesTest
                       JsonTest
                       ListHelpersTest
                       MathPolarTest
                       MeshGenerationTest
                       ParseJuicyTest
                       RadiusTest
                       RotationsTest
                       ScanFilterTest
                       SequenceTest
                       SlicerTest
                       VerticalFacesTest
                       GeometryRadiusTest
                       AngleTest
                       VertexTest
                       PointsTest
                       DiamondCutterTest
                       LineScannerTest
                       JoinerTest
 
  build-depends:       base
                     , ChampCad
                     , lens >= 4.13
                     , mtl >= 2.2.1
                     , HUnit >=1.2.5.2
                     , text >= 1.1.0.0
                     , transformers >= 0.4.2.0
                     , containers >=0.5.5.1
                     , aeson >= 0.9.0.0
                     , bytestring >= 0.10.4.0
                     , flow >= 1.0.2
                     , persistent >= 2.2.4
                     , persistent-sqlite >= 2.2
                     , persistent-template >= 1.3.1.4
                     
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ChampCad
